--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 backports.shutil-get-terminal-size==1.0.0
 decorator==4.3.0
+dj-database-url==0.5.0
 Django==1.11
 djangorestframework==3.8.2
 enum34==1.1.6
@@ -11,6 +12,7 @@ pathlib2==2.3.2
 pexpect==4.6.0
 pickleshare==0.7.4
 prompt-toolkit==1.0.15
+psycopg2==2.7.5
 ptyprocess==0.6.0
 Pygments==2.2.0
 pytz==2018.5
